--- a/src/app/Pages/SignIn/styles.module.scss
+++ b/src/app/Pages/SignIn/styles.module.scss
@@ -1,43 +1,51 @@
-$color1: #707070;
-$position1: fixed;
-$font-size1: 30px;
-$font-size2: 20px;
-$z-index1:200;
+$text-color: #2d1e1e;
 
-.Message1{
-  @mixin margin{
-    margin-top:250px;
-    margin-left: 210px;
-  }
-@include margin;
-  z-index: $z-index1;
-  font-size: $font-size1;
-  position: $position1;
-  color:$color1;
-    }
-.Message2{
-  @mixin margin{
-    margin-top:310px;
-    margin-left: 150px;
-  }
-  @include margin;
-  font-size:$font-size2;
-  color: $color1;
-  position: $position1;
-  text-align:center;
-  z-index:$z-index1;
+.container {
+  height: 100%;
+  background-size: contain;
+  background-repeat: repeat;
+  background-image: url("../../Assets/Svgs/components/seamless_backgroud.svg");
 }
-.Background{
-  z-index: 100;
-  position:absolute;
-  width:100%;
-  height:100%;
-  overflow: hidden;
 
+.message_box {
+  top: 50%;
+  width: 38%;
+  height: 40%;
+  margin-left: 12%;
+  user-select: none;
+  text-align: center;
+  position: absolute;
+  transform: translateY(-20%);
 }
-.Header{
-  z-index: 200;
-  margin-top:-290px;
+
+.message1 {
+  font-weight: bold;
+  color: $text-color;
+  margin: 0 0 15px 0;
+  font-size: clamp(16px, 2vw, 48px);
+}
+
+.message2 {
+  margin: 0;
   position: fixed;
+  text-align: center;
+  color: $text-color;
+  font-size: clamp(16px, 1.3vw, 48px);
+}
 
+.background {
+  top: 50%;
+  height: 50%;
+  overflow: hidden;
+  position: absolute;
+  transform: translateY(-50%);
+}
+
+.header {
+  top: 0;
+  width: 100%;
+  height: 20%;
+  position: fixed;
+  background-repeat: repeat-x;
+  background-image: url("../../Assets/Svgs/components/wave.svg");
 }
