--- a/src/app/Pages/SignIn/Components/SignInInputBox/styles.module.scss
+++ b/src/app/Pages/SignIn/Components/SignInInputBox/styles.module.scss
@@ -1,22 +1,12 @@
 $button_color: #328ddc;
 $input_background_color: #f0f0f0;
 
-.input_box_container {
-  top: 25%;
-  width: 25%;
-  height: 50%;
-  margin-left: 60%;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  direction: rtl;
-}
-
 .input_box_title {
   color: #2682cd;
-  font-size: 47px;
   margin-bottom: 10%;
   align-self: center;
+  font-family: IRANMarker;
+  font-size: clamp(16px, 2.5vw, 48px);
 }
 
 //className
@@ -26,7 +16,9 @@ $input_background_color: #f0f0f0;
 
 //inputClassName
 .input {
-  width: 90%;
+  width: 100%;
+  height: 32px;
+  font-size: 14px;
   background-color: $input_background_color;
 }
 
@@ -37,29 +29,15 @@ $input_background_color: #f0f0f0;
 
 .forget_pass {
   color: #515457;
-  text-decoration: none;
-  font-size: 22px;
-  margin-bottom: 10%;
+  margin-top: 15px;
+  font-weight: 500;
   align-self: center;
+  text-decoration: none;
+  font-size: clamp(16px, 1.5vw, 48px);
 }
-
 
 .enter_button {
-  background-color: $button_color;
-  color: white;
-  margin: 5% 0;
   width: 40%;
-  border-radius: 5px;
-  font-size: 24px;
-  border: 0;
-  box-shadow: none;
-  font-family: Shabnam;
-  font-weight: normal;
+  margin-top: 15px;
   align-self: center;
 }
-
-
-
-
-
-
