--- a/src/app/Pages/Authorization/styles.module.scss
+++ b/src/app/Pages/Authorization/styles.module.scss
@@ -5,11 +5,13 @@
   background-image: url("../../Assets/Svgs/components/seamless_backgroud.svg");
 }
 
-.header {
-  top: 0;
-  width: 100%;
-  height: 20%;
-  position: fixed;
-  background-repeat: repeat-x;
-  background-image: url("../../Assets/Svgs/components/wave.svg");
-}
+
+  .header {top: 0;
+    width: 100%;
+    height: 13%;
+    position: fixed;
+    background-size: inherit;
+    background-repeat: repeat-x;
+    background-position-x: center;
+    background-image: url("../../Assets/Svgs/components/wave.svg");
+  }
