--- a/src/app/Pages/Home/styles.module.scss
+++ b/src/app/Pages/Home/styles.module.scss
@@ -1,70 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.AppLogo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .AppLogo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.AppHeader {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.AppName {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-.container{
-  background-image: url("../../Assets/Images/Files/home.png");
+.container {
   height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
-.nav_link{
+.header {
+  display: flex;
+  flex-direction: row;
+  height: clamp(700px, 100vh, 1080px);
+}
+
+.landing_image {
+  height: 100%;
+}
+
+.nav_link {
   color: #707070;
 }
 
-.nav{
-  padding-top: 50px;
-  padding-left: 40%;
+.nav {
+  width: 28%;
+  margin-left: 3%;
+  padding-top: 75px;
 }
 
 .nav ul {
+  padding: 0;
   display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap;
-  justify-content: flex-end;
   list-style: none;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 
-.nav li{
-  padding-left: 5%;
+.nav li {
   font-size: clamp(14px, 2vw, 23px);
-  font-family: Shabnam;
 }
 
