--- a/src/app/Components/SEInput/styles.module.scss
+++ b/src/app/Components/SEInput/styles.module.scss
@@ -11,7 +11,7 @@ $failed_regex_primary_color: #e62e00;
   position: relative;
   box-shadow: 0 0 0 0;
   display: inline-block;
-  border: 1px solid #B8B8B8;
+  border: 1px solid #b8b8b8;
 }
 
 .focused_input_container {
@@ -27,9 +27,10 @@ $failed_regex_primary_color: #e62e00;
 
 .label {
   top: 50%;
-  color: #B8B8B8;
-  margin: 0 10px 0;
-  transition: 200ms;
+  color: #b8b8b8;
+  margin: 0 10px;
+  font-size: 22px;
+  transition: .2s;
   position: absolute;
   pointer-events: none;
   transform: translateY(-50%);
@@ -38,23 +39,23 @@ $failed_regex_primary_color: #e62e00;
 .focused_label {
   top: -8px;
   padding: 0 5px;
+  font-size: 20px;
   margin-right: 8px;
   visibility: visible;
   border-radius: 10px;
-  background-color: #fbfbfb;
+  background-color: #fff;
   color: $input_primary_color;
 }
 
 .input {
-  height: 48px;
   outline: none;
   border: hidden;
   color: #606060;
-  padding: 0 10px;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
   border-radius: 8px;
   font-family: inherit;
+  padding: .3em 10px;
 }
 
 .eye_svg {
@@ -71,4 +72,5 @@ $failed_regex_primary_color: #e62e00;
 
 .failed_regex_focused_label_color {
   color: $failed_regex_primary_color;
+  border-color: $failed_regex_primary_color;
 }
