--- a/src/app/Pages/Authorization/SignIn/styles.module.scss
+++ b/src/app/Pages/Authorization/SignIn/styles.module.scss
@@ -6,25 +6,25 @@ $text-color: #2d1e1e;
 
 .input_box_container {
   top: 50%;
-  width: 25%;
+  right: 7%;
   height: 50%;
   display: flex;
   direction: rtl;
-  right: 10%;
   position: absolute;
   flex-direction: column;
   transform: translateY(-30%);
+  width: clamp(300px, 23%, 460px);
 }
 
 .message_box {
   top: 50%;
   width: 38%;
   height: 40%;
-  margin-left: 12%;
+  margin-left: 14%;
   user-select: none;
   text-align: center;
   position: absolute;
-  transform: translateY(-20%);
+  transform: translateY(-30%);
 }
 
 .message1 {
