--- a/src/app/Pages/Authorization/SignUp/Components/SignUpInputBox/styles.module.scss
+++ b/src/app/Pages/Authorization/SignUp/Components/SignUpInputBox/styles.module.scss
@@ -1,34 +1,30 @@
 $button_color: #328ddc;
-$input_background_color: #f0f0f0;
+$input_background_color: #fff;
 
 .input_box_title {
   color: #2682cd;
   margin-bottom: 10%;
   align-self: center;
   font-family: IRANMarker;
-  font-size: clamp(16px, 2.5vw, 48px);
+  font-size: clamp(16px, 2.0vw, 48px);
 }
 
-//className
 .input_class {
-  margin: 5% 0;
+  width: 79%;
+  margin: 0 auto 12%;
 }
 
-//inputClassName
 .input {
   width: 100%;
-  height: 32px;
-  font-size: 14px;
   background-color: $input_background_color;
 }
 
-//inputContainerClassName
 .inner_container {
   background-color: $input_background_color;
 }
 
 .enter_button {
   width: 40%;
-  margin-top: 15px;
+  height: 42px;
   align-self: center;
 }
