--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ant-btn {
+  padding-top: 0 !important;
+  border-radius: 8px !important;
+
+  span {
+    font-size: 20px;
+  }
+}
