--- a/src/app/Pages/Home/styles.module.scss
+++ b/src/app/Pages/Home/styles.module.scss
@@ -1,41 +1,41 @@
 .container {
   direction: rtl;
-  height: 100%;
   background-color: #fffefd;
 }
 
 .header {
-  // display: flex;
-  // flex-direction: row;
-  // height: clamp(700px, 100vh, 1080px);
+  display: flex;
+  flex-direction: row;
+  height: clamp(700px, 100vh, 1080px);
   position: relative;
-  overflow: auto;
 }
 
 .landing_image {
-  width: 40%;
-  //height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  height: 110%;
 }
 
 .nav_link > a {
   color: #707070;
+  font-size: 23px;
 }
 
 .nav {
-  width: 50%;
-  margin: 2rem 4rem;
-  // margin-left: 3%;
-  // padding-top: 75px;
+  width: calc(100% - 7vw - 2vw);
+  margin-right: 7vw;
+  padding-top: 8.5vh;
   z-index: 1;
 }
 
-.nav img {
-  width: 1.5rem;
-  height: 1.5rem;
-  margin: 0 2rem;
+.nav img:nth-child(2) {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 0 0 3vw;
+}
+
+.nav img:nth-child(1) {
+  width: 3.6rem;
+  height: 3rem;
+  margin: 0 0 0 2vw;
 }
 
 .nav ul {
@@ -47,32 +47,50 @@
 }
 
 .nav li {
+  display: flex;
+  align-items: center;
   font-size: clamp(14px, 2vw, 18px);
 }
 
 .title {
-  width: 30%;
-  margin-top: 5rem;
-  margin-right: 10%;
-  font-size: clamp(15px, 2vw, 20px);
+  width: 47%;
+  display: flex;
+  margin: 0 14vw;
+  min-height: 100%;
+  font-weight: bold;
+  padding-bottom: 15rem;
+  vertical-align: middle;
+  flex-direction: column;
+  justify-content: center;
+  font-size: clamp(30px, 3.2vw, 60px);
 }
 
-.title > h1:nth-child(1) {
+.title > p {
+  margin: 0;
+}
+
+.title > p:nth-child(1) {
   color: #0a1f58;
 }
-.title > h1:nth-child(1) span {
+
+.title > p:nth-child(1) span {
   color: #103cb7;
 }
-.title > h1:nth-child(2) {
+
+.title > p:nth-child(2) {
   color: #0a9ea2;
 }
-.title > h6 {
+
+.title > p:nth-child(3) {
   margin-top: 3rem;
   text-align: right;
   color: #777777;
+  font-weight: 500;
+  font-size: clamp(14px, 1.1vw, 21px);
 }
 
 .main {
+  min-height: 100%;
   direction: rtl;
 }
 
@@ -98,7 +116,7 @@
   width: 100%;
   border-top: solid 20px #0a9fa3;
   background-color: rgba(3, 19, 115, 0.88);
-  padding: 1rem 5rem;
+  padding: 1rem 0;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -109,19 +127,23 @@
   flex: 50%;
 }
 
-.footer_contact h1 {
+.footer_contact p {
   color: white;
-  margin: 1rem 0;
+  margin: 1rem 6vw;
+  font-weight: bold;
+  font-size: clamp(30px, 2.5vw, 47px);
 }
-.footer_contact h1 img {
-  width: 3.5rem;
-  height: 3rem;
+
+.footer_contact p img {
+  width: 4rem;
+  height: 3.3rem;
   margin: 0 0.5rem;
 }
 
 .footer_contact div {
   color: #d4d8e3;
-  margin: 2rem;
+  margin: 2rem 12vw 0 0;
+  font-size: 17px;
 }
 
 .footer_contact div img {
