--- a/src/app/Pages/Home/Components/Topic/styles.module.scss
+++ b/src/app/Pages/Home/Components/Topic/styles.module.scss
@@ -41,12 +41,14 @@
 
   .topic:nth-child(2n) > .topic_content {
     background-color: #0a9ea2;
-    background-image: linear-gradient(0, #0a9ea2, #0ec0d5);
+    background-position: center;
+    background-image: url("../../../../Assets/Images/Files/card_cyan_background.png");
   }
 
   .topic:nth-child(2n + 1) > .topic_content {
     background-color: royalblue;
-    background-image: linear-gradient(0, #1355ad, #307bfa);
+    background-position: center;
+    background-image: url("../../../../Assets/Images/Files/card_blue_background.png");
   }
 
   .topic_content > h3 {
