--- a/src/app/Pages/Dashboard/styles.module.scss
+++ b/src/app/Pages/Dashboard/styles.module.scss
@@ -1,89 +1,128 @@
 .container {
   height: 100%;
+  display: flex;
   background-color: #212f84;
 }
 
-.right_side{
-  position: fixed;
-  right: clamp(50px,5vw,108px);
+.right_side {
+  flex: 1;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-content: center;
-}
-
-.left_side{
-  border-radius: 0 40px 40px 0;
-  background-color: #ffffff;
-  position: fixed;
-  left: 0;
-  height:100%;
-  width: 75%;
-}
-
-.nav ul{
-  display: flex;
   flex-direction: column;
-  list-style-type: none;
+}
+
+.left_side {
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 0 40px 40px 0;
+  width: calc(100% - clamp(200px, 25%, 462px));
+}
+
+.nav ul {
+  padding: 0;
+  display: flex;
   direction: rtl;
   align-self: center;
-  margin-top: clamp(60px,9vh,97px)
+  list-style-type: none;
+  flex-direction: column;
 }
-.nav li{
-  height: 6.8vh;
+
+.nav li {
+  margin: 1vh 0;
   display: flex;
+  color: #ffffff;
+  font-weight: bold;
   flex-direction: row;
   align-items: center;
-  color: #ffffff;
-  font-family:Shabnam ;
-  font-size:clamp(12px, 2vw, 22px);
-  font-weight:bold ;
-  margin-bottom: clamp(10px,2.5%,26px);
-}
-
-.nav li > a{
-  color: #ffffff;
-}
-
-.nav li:hover , .exit:hover{
-  background-color: rgba(255, 255, 255, 0.15);
+  transition: all 0.2s;
+  justify-content: center;
+  background-color: #212f84;
   border-radius: 30px 0 0 30px;
+  font-size: clamp(12px, 2vw, 22px);
 }
 
+.nav li > a {
+  color: #ffffff;
+}
 
-.info{
+.nav li:hover, .exit:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.nav {
+  .item {
+    width: 100%;
+    display: flex;
+    cursor: pointer;
+    min-height: 72px;
+    user-select: none;
+    align-items: center;
+    padding-right: clamp(5px, 5.2vw, 101px);
+
+    img {
+      margin: 5px 0;
+    }
+
+    .item_label {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+
+      p {
+        margin: 0;
+        font-size: clamp(16px, 1.2vw, 22px);
+      }
+    }
+  }
+}
+
+.info {
+  height: 43vh;
+  color: white;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   font-weight: normal;
+  flex-direction: column;
+  justify-content: center;
   font-size: clamp(15px, 2vw, 30px);
-  font-family: Shabnam;
-  color: white;
-  position: absolute;
-  top: clamp(5%,12%,20%);
+
+  p {
+    margin: 20px 0 0;
+    user-select: none;
+  }
+
+  &_avatar {
+    position: relative;
+    width: clamp(80px, 15vh, 163px);
+    height: clamp(80px, 15vh, 163px);
+
+    img {
+      position: absolute;
+      width: clamp(80px, 15vh, 163px);
+      height: clamp(80px, 15vh, 163px);
+
+      &:nth-child(1) {
+        top: -10%;
+        right: -20%;
+        width: clamp(80px, 7.5vh, 84px);
+        height: clamp(80px, 7.5vh, 84px);
+      }
+    }
+  }
+
+  .avatar {
+    border-radius: 50%;
+    margin-bottom: 30px;
+    border: solid 7px rgba(4, 22, 128, 0.88);
+  }
 }
 
-.avatar{
-  border-radius: 50%;
-  border: solid 7px rgba(4, 22, 128, 0.88);
-  height:clamp(80px, 15vh, 163px) ;
-  width:clamp(80px, 8vw, 163px) ;
-  margin-bottom: 30px;
+
+.exit {
+  margin-top: auto;
 }
 
-
-.exit{
-  display: flex;
-  flex-direction: row;
-  color: white;
-  font-family:Shabnam ;
-  font-size:clamp(12px, 2vw, 22px);
-  font-weight:bold ;
-  position: fixed;
-  bottom: 17%;
-  height: 6.8vh;
-}
-
-.exit > a{
+.exit > a {
   color: white;
 }
