--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, textarea, button, input {
+html, body, textarea, button, input, li {
   font-family: Shabnam, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif !important;
