--- a/src/app/Pages/Dashboard/Layout/Topics/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Topics/styles.module.scss
@@ -27,14 +27,22 @@
         left: 0;
         width: 100%;
         height: 100%;
-        cursor: pointer;
         position: absolute;
 
         &_header {
-          height: 58%;
+          height: 53%;
           display: flex;
+          margin: 5% 6% 0;
+          cursor: pointer;
+          transition: all 1s;
           align-items: center;
+          background: #1d79ad00;
           justify-content: center;
+          border-top-right-radius: 40px;
+
+          &:hover {
+            background: #1d79ad9e;
+          }
 
           .topic_avatar {
             margin-top: 15%;
@@ -66,9 +74,33 @@
         &_footer {
           height: 42%;
           display: flex;
+          position: relative;
           align-items: center;
           flex-direction: column;
           justify-content: center;
+
+          &_edit {
+            top: 5%;
+            left: 8%;
+            width: 36px;
+            height: 36px;
+            display: flex;
+            cursor: pointer;
+            position: absolute;
+            border-radius: 18px;
+            align-items: center;
+            transition: all 0.2s;
+            justify-content: center;
+            background-color: #254f98;
+
+            &:hover {
+              background-color: #305eae;
+            }
+
+            img {
+              width: unset;
+            }
+          }
 
           p {
             width: 65%;
