--- a/src/app/Pages/Home/styles.module.scss
+++ b/src/app/Pages/Home/styles.module.scss
@@ -16,6 +16,19 @@
   height: 110%;
 }
 
+@media (max-width: 1620px) and (min-width: 850px) {
+  .landing_image {
+    margin-left: calc(100vw - 1620px);
+  }
+}
+
+@media (max-width: 850px) {
+  .landing_image {
+    position: absolute;
+    right: calc(100% - 60px);
+  }
+}
+
 .nav_link > a {
   color: #707070;
   font-size: clamp(15px, 1.1vw, 20px);
@@ -23,7 +36,8 @@
 
 .nav {
   padding-top: 8.5vh;
-  margin-right: clamp(88px, 7.2vw, 137px);
+  margin-left: clamp(40px, 3.6vw, 70px);
+  margin-right: clamp(26px, 7.2vw, 137px);
 }
 
 .nav img:nth-child(1) {
@@ -52,7 +66,6 @@
 }
 
 .title {
-  width: 47%;
   display: flex;
   margin: 0 14vw;
   min-height: 100%;
@@ -66,6 +79,7 @@
 
 .title > p {
   margin: 0;
+  text-align: end;
 }
 
 .title > p:nth-child(1) {
@@ -91,7 +105,7 @@
 .main {
   direction: rtl;
   min-height: 105vh;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
 }
 
 .main_title {
@@ -111,6 +125,14 @@
   justify-content: space-between;
 }
 
+@media (max-width: 780px) {
+  .topic_container {
+    width: calc(100%);
+    margin: 2rem 0;
+    justify-content: center;
+  }
+}
+
 .footer {
   direction: rtl;
   width: 100%;
@@ -122,6 +144,13 @@
   align-items: center;
   justify-content: center;
   scroll-snap-align: center;
+}
+
+@media (max-width: 1100px) {
+  .footer {
+    align-items: end;
+    flex-direction: column;
+  }
 }
 
 .footer_contact {
@@ -159,6 +188,18 @@
   align-items: center;
   flex-flow: row nowrap;
   justify-content: center;
+}
+
+@media (max-width: 1100px) {
+  .footer {
+    align-items: end;
+    flex-direction: column;
+  }
+
+  .footer_social {
+    margin-top: 1rem;
+    align-self: center;
+  }
 }
 
 .footer_social div {
