--- a/src/app/Pages/CreateTicket/styles.module.scss
+++ b/src/app/Pages/CreateTicket/styles.module.scss
@@ -33,7 +33,8 @@
     a {
       color: #ffffff;
       font-weight: 400;
-      margin-left: 4rem;
+      font-size: clamp(13px, 0.9vw, 16px);
+      margin-left: clamp(8px, 3.4vw, 64px);
 
       &:last-of-type {
         font-weight: bold;
@@ -45,7 +46,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: clamp(400px, 30%, 566px);
+    width: clamp(350px, 30%, 566px);
 
     .avatar {
       margin-top: 3vh;
@@ -95,7 +96,7 @@
 
 
       .tag_input_class {
-        width: 100%;
+        width: 80%;
       }
 
       .enter_button {
