--- a/src/app/Pages/Dashboard/Layout/CreateTopic/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/CreateTopic/styles.module.scss
@@ -1,57 +1,53 @@
 $header-background-color: #265ecd;
 .container {
-  height: 100%;
 }
 
 .rectangle {
-  box-shadow: 1px 2px 2px 1px #707070;
-  width: 390px;
-  height: 450px;
-  margin-top: 3%;
+  display: flex;
+  margin: 3% auto 0;
   object-fit: contain;
-  margin-left: 31%;
   border-radius: 10% 3%;
+  flex-direction: column;
+  width: clamp(390px, 28vw, 523px);
+  box-shadow: 1px 2px 2px 1px #7070709c;
 }
 
 .header {
-  width: 390px;
-  height: 40px;
-  background-color: $header-background-color;
   opacity: .9;
-  display: flex;
   color: #fff;
-  font-size: 13px;
-  border-radius: 29% 12% 0 0;
+  width: 100%;
+  height: 61px;
+  display: flex;
+  font-size: 16px;
   padding-right: 4%;
   align-items: center;
   justify-content: flex-end;
+  border-radius: 50px 10px 0 0;
+  background-color: $header-background-color;
 
   img:nth-child(1) {
     width: 25px;
-    height: 24px;
-    margin: 0 0 0 2vw;
     color: #fff;
+    height: 24px;
+    margin: 0 0 0 15px;
     border-color: #fff;
   }
 }
 
 .upload {
   display: flex;
-  margin-top: 5px;
+  margin: 25px 0;
   align-items: center;
   flex-direction: column;
-  width: clamp(400px, 30%, 566px);
 }
 
 .picture {
   object-fit: none;
-  padding-top:2px;
+  padding-top: 2px;
   border-radius: 50%;
   border: solid 3px #265ecd;
   width: clamp(60px, 7vw, 100px);
   height: clamp(60px, 7vw, 100px);
-
-
 }
 
 .upload_image {
@@ -59,10 +55,9 @@ $header-background-color: #265ecd;
 }
 
 .middle {
-  width: 70%;
-  margin-right: 25%;
+  width: 100%;
   text-align: right;
-  padding-bottom: 5px;
+  padding: 0 2rem 15px;
 }
 
 .middle label {
@@ -72,30 +67,25 @@ $header-background-color: #265ecd;
   font-size: 12px;
   color: #707070;
   opacity: 0.8;
-  direction: rtl;
+}
+
+.input {
+  box-shadow: unset !important;
 }
 
 .middle input {
-  width: 80%;
+  width: 100%;
   height: 35px;
-  border-radius: 5px;
-  padding: 5px;
-  direction: rtl;
-  box-shadow: .5px .5px 1px 1px #707070;
   border: none;
-}
-
-@media(min-width: 500px) {
-  .middle {
-    width: 450px;
-  }
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: .5px .5px 1px 1px #707070;
 }
 
 .below {
-  width: 70%;
-  margin-right: 25%;
+  width: 100%;
   text-align: right;
-  padding-bottom: 15px;
+  padding: 0 2rem 15px;
 }
 
 .below label {
@@ -105,30 +95,22 @@ $header-background-color: #265ecd;
   font-size: 12px;
   color: #707070;
   opacity: 0.8;
-  direction: rtl;
 }
 
 .below input {
-  width: 80%;
+  width: 100%;
   height: 85px;
   border-radius: 5px;
-  direction: rtl;
   box-shadow: .5px .5px 1px 1px #707070;
   border: none;
 
 }
 
-@media(min-width: 500px) {
-  .below {
-    width: 450px;
-  }
-}
-
 .enter_button {
-  background-color: $header-background-color;
-
   width: 40%;
+  opacity: .9;
   height: 32px;
   align-self: center;
-  opacity: .9;
+  margin-bottom: 15px;
+  background-color: $header-background-color;
 }
