--- a/src/app/Pages/Dashboard/Layout/Tickets/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Tickets/styles.module.scss
@@ -5,7 +5,8 @@
   margin: 5.5vh auto 7.9vh auto;
   border-radius: 5px;
 }
-.inner_top{
+
+.inner_top {
   display: flex;
   flex-direction: row;
   direction: rtl;
@@ -16,40 +17,38 @@
   transform: translateY(-50%);
 }
 
-.search_button{
+.search_button {
+  height: 3.6vh;
   display: flex;
+  margin-right: 5.6%;
+  margin-bottom: 10px;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: #083da6;
-  width: clamp(90px,7.8%,120px);
-  height: 3.6vh;
-  font-size: clamp(10px,0.9vw,16px);
-  margin-right: 5.6%;
+  width: clamp(90px, 7.8%, 120px);
+
+  span {
+    font-size: clamp(10px, 0.9vw, 16px);
+  }
 }
 
 .search_image {
-  width: clamp(15px,17.9%,19px);
-  height: clamp(15px,49%,20px);
   margin-left: 10%;
+  height: clamp(15px, 49%, 20px);
+  width: clamp(15px, 17.9%, 19px);
 }
-.input{
+
+.input {
+  width: 22%;
   display: flex;
+  margin-left: 1.1%;
+  margin-right: 1.6%;
   flex-direction: column;
   align-items: flex-start;
-  margin-right: 1.6%;
-  margin-left: 1.1%;
 }
 
-.input_box{
-  margin-top: 5px;
-  border-radius: 8px;
-  border-style: none;
-  height: 3.6vh;
-  width:15.6vw;
-}
-
-.input_label{
+.input_label {
   color: white;
   font-size: 18px;
 }
@@ -63,8 +62,9 @@
 
 .ticket_table, td, th {
   direction: rtl;
-  border: 1px solid #bcb6b6;
+  user-select: none;
   text-align: center;
+  border: 1px solid #bcb6b6;
 }
 
 th {
@@ -87,15 +87,17 @@ td {
 .td_title {
   width: 23.8%;
   color: #42a4d8;
+  cursor: pointer;
 }
 
 .td_condition {
   width: 21.1%;
 }
 
-.hour{
-  margin-left:18.6% ;
+.hour {
+  margin-left: 18.6%;
 }
+
 .td_start {
   width: 21.4%;
   color: #656a6c;
@@ -107,47 +109,11 @@ td {
   color: #656a6c;
 }
 
-.closed_condition {
-  background-color: #295cc0;
-  margin-left: auto;
-  margin-right: auto;
-  width: 39%;
-  height: 50%;
-  border-radius: 5px;
+.td_condition_container {
   color: white;
-  font-size: clamp(13px,0.8vw,16px);
-}
-
-.answered_condition {
-  background-color: #3d6cc9;
-  margin-left: auto;
-  margin-right: auto;
-  width: 39%;
-  height: 50%;
+  margin: 0 auto;
   border-radius: 5px;
-  color: white;
-  font-size: clamp(13px,0.8vw,16px);
+  display: inline-block;
+  padding: 2px 10px;
+  font-size: clamp(13px, 0.8vw, 16px);
 }
-
-.waiting_condition {
-  background-color: #44adf2;
-  margin-left: auto;
-  margin-right: auto;
-  width: 39%;
-  height: 50%;
-  border-radius: 5px;
-  color: white;
-  font-size: clamp(13px,0.8vw,16px);
-}
-
-.processing_condition {
-  background-color: #0088e3;
-  margin-left: auto;
-  margin-right: auto;
-  width: 39%;
-  height: 50%;
-  border-radius: 5px;
-  color: white;
-  font-size: clamp(13px,0.8vw,16px);
-}
-
