--- a/src/app/Pages/Home/styles.module.scss
+++ b/src/app/Pages/Home/styles.module.scss
@@ -1,3 +1,5 @@
+$mobile-header: #1743bf;
+
 .container {
   height: 100%;
   overflow-y: scroll;
@@ -38,6 +40,10 @@
   padding-top: 8.5vh;
   margin-left: clamp(40px, 3.6vw, 70px);
   margin-right: clamp(26px, 7.2vw, 137px);
+
+  @media screen and (max-width: 720px) {
+    display: none;
+  }
 }
 
 .nav img:nth-child(1) {
@@ -211,4 +217,105 @@
 .footer_social div img {
   width: 100%;
   height: 100%;
+}
+
+
+
+.mobile_header {
+  position: fixed;
+  display: none;
+  width: 100%;
+  right: 0;
+  top: 0;
+  color: #ffffff;
+  font-size: 20px;
+  flex-direction: column;
+  box-shadow: 0 1px 1px 0 $mobile-header;
+  z-index: 100;
+
+  @media screen and (max-width: 720px) {
+    display: flex;
+  }
+
+  &[data-active="true"] {
+    box-shadow: unset;
+
+    .mobile_header_activator_top_line {
+      transform: translateY(.35em) rotate(-45deg);
+    }
+
+    .mobile_header_activator_middle_line {
+      opacity: 0;
+    }
+
+    .mobile_header_activator_bottom_line {
+      transform: translateY(-.35em) rotate(45deg);
+    }
+
+    .mobile_header_drop_down {
+      height: 155px;
+    }
+  }
+}
+
+.mobile_header_top_side {
+  display: flex;
+  flex-direction: row;
+  padding: 16px 20px;
+  background-color: $mobile-header;
+}
+
+.mobile_header_top_right_side {
+  flex: 1;
+  text-align: end;
+}
+
+.mobile_header_activator {
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.mobile_header_activator_top_line, .mobile_header_activator_middle_line, .mobile_header_activator_bottom_line {
+  display: block;
+  background-color: #ffffff;
+  border-radius: 5px;
+  width: 1em;
+  height: 2px;
+  margin: 5px;
+  transition: all .4s;
+}
+
+.mobile_header_title {
+  margin-right: 16px;
+  font-weight: bold;
+}
+
+.mobile_header_grid_view {
+  margin: auto;
+
+  path {
+    fill: #ffffff;
+  }
+}
+
+.mobile_header_drop_down {
+  border-radius: 0 0 3px 3px;
+  overflow: hidden;
+  box-shadow: 0 1px 1px 0 $mobile-header;
+  height: 0;
+  transition: all .4s;
+}
+
+.mobile_header_drop_down_item {
+  display: block;
+  color: #ffffff;
+  text-align: end;
+  padding: 10px 65px 10px 20px;
+  border-bottom: 1px solid $mobile-header;
+  background-color: lighten($mobile-header, 3%);
+}
+
+.mobile_header_drop_down_item:last-child {
+  border-bottom: none;
 }
