--- a/src/app/Pages/Dashboard/Layout/SubmitCertificate/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/SubmitCertificate/styles.module.scss
@@ -27,6 +27,12 @@ $border_color: #c4c5c9;
   align-self: center;
 }
 
+.report_title_image {
+  @extend .title_image;
+  margin-right: 6%;
+  margin-left: 4.3%;
+}
+
 .container_upload {
   border-radius: 30px 10px 30px 10px;
   box-shadow: 0 2px 2px 0 $border_color, 0 0 8px 0 $border_color;
@@ -113,5 +119,71 @@ $border_color: #c4c5c9;
       font-size: clamp(10px, 0.9vw, 16px);
       font-weight: bold;
     }
+  }
+}
+
+.container_report {
+  @extend .container_upload;
+  width: 58.7%;
+  direction: rtl;
+
+  .report_body {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .right_side {
+    color: #307bfa;
+    font-weight: 500;
+    font-size: clamp(20px, 1.3vw, 25px);
+    width: 51.1%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .divider {
+    border-left: 1px solid #d2d3d6;
+    height: 45.1vh;
+  }
+
+  .left_side {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .request_titles {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-right: 2vw;
+  }
+
+  .request {
+    color: #454647;
+    font-weight: 500;
+    font-size: clamp(15px, 1vw, 20px);
+    margin-bottom: 8.3vh;
+  }
+
+  .request_data {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 20.1vw;
+  }
+
+  .request_data_container {
+    width: 5.8vw;
+    text-align: center;
+    color: white;
+    border-radius: 5px;
+    display: inline-block;
+    padding: 2px 10px;
+    font-size: clamp(10px, 0.8vw, 16px);
+    background-color: #0088e3;
+    margin-bottom: 8.1vh;
   }
 }
