--- a/src/app/Pages/Dashboard/Layout/Ticket/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Ticket/styles.module.scss
@@ -127,5 +127,45 @@
       display: none;
     }
   }
+
+  .attachment {
+    height: 36px;
+    display: flex;
+    margin: 0 5px;
+    padding: 0 10px;
+    border-radius: 5px;
+    align-items: center;
+    transition: all 0.5s;
+    background-color: #26a9ad;
+
+    &_icon {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+      margin-left: 5px;
+      transition: all 0.2s;
+
+      &:hover {
+        filter: alpha(0.65);
+      }
+
+      &:last-child {
+        width: 16px;
+        height: 16px;
+      }
+    }
+
+    &_input {
+      display: none;
+    }
+
+    .name {
+      margin: 0;
+      color: #ffffff;
+      overflow: hidden;
+      user-select: none;
+      white-space: nowrap;
+    }
+  }
 }
 
