--- a/src/app/Pages/Dashboard/Layout/SubmitCertificate/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/SubmitCertificate/styles.module.scss
@@ -1,21 +1,22 @@
 $border_color: #c4c5c9;
 
 .top_part {
-  background-color: #295cc0;
   width: 100%;
   height: 13.1%;
+  background-color: #295cc0;
   border-radius: 30px 10px 0 0;
 }
 
 .title {
-  direction: rtl;
-  display: flex;
-  flex-direction: row;
-  color: white;
-  position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  color: white;
+  display: flex;
+  direction: rtl;
+  user-select: none;
   font-weight: bold;
+  position: relative;
+  flex-direction: row;
+  transform: translateY(-50%);
   font-size: clamp(15px, 1.1vw, 23px);
 }
 
@@ -34,35 +35,36 @@ $border_color: #c4c5c9;
 }
 
 .container_upload {
+  height: 52%;
+  display: flex;
+  margin: 7.7vh auto 0;
+  flex-direction: column;
+  border: 1px solid $border_color;
+  width: clamp(350px, 31.6%, 462px);
   border-radius: 30px 10px 30px 10px;
   box-shadow: 0 2px 2px 0 $border_color, 0 0 8px 0 $border_color;
-  border: 1px solid $border_color;
-  width: 31.6%;
-  height: 52%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 7.7vh;
 
   .upload_body {
+    flex: 1;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
   }
 
   .upload_text {
     color: #454647;
-    font-weight: bold;
-    font-size: clamp(16px, 1.1vw, 22px);
     margin-top: 23%;
+    font-weight: bold;
+    user-select: none;
     margin-bottom: 20%;
+    font-size: clamp(16px, 1.1vw, 22px);
   }
 
   .attachment_box {
-    border: 1px solid #cfcfd3;
     width: 65.1%;
     height: 3.6vh;
     border-radius: 5px;
-    margin-bottom: 19.9%;
+    border: 1px solid #cfcfd3;
   }
 
   .input_file {
@@ -70,17 +72,16 @@ $border_color: #c4c5c9;
   }
 
   .input_box {
+    height: 100%;
     display: flex;
+    padding: 0 10px;
     flex-direction: row;
+    align-items: center;
     justify-content: flex-end;
   }
 
   .upload_icon {
-    height: clamp(12px, 1.9vh, 22px);
-    width: clamp(10px, 0.9vw, 18px);
     cursor: pointer;
-    position: fixed;
-    left: 31vw;
   }
 
   .attached_file {
@@ -102,29 +103,35 @@ $border_color: #c4c5c9;
   }
 
   .file_name {
+    flex: 1;
     margin: 0;
-    color: white;
+    font-size: 15px;
+    font-weight: 600;
     overflow: hidden;
     user-select: none;
+    text-align: right;
     white-space: nowrap;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   }
 
   .submit_button {
-    background-color: #1975bb;
     color: white;
-    width: 8.1vw;
     height: 3.5vh;
+    margin-top: auto;
+    margin-bottom: 50px;
+    background-color: #1975bb;
+    width: clamp(100px, 8.1vw, 156px);
 
     span {
-      font-size: clamp(10px, 0.9vw, 16px);
       font-weight: bold;
+      font-size: clamp(14px, 0.9vw, 16px);
     }
   }
 }
 
 .container_report {
   @extend .container_upload;
-  width: 58.7%;
+  width: clamp(500px, 58.7%, 857px);
   direction: rtl;
 
   .report_body {
@@ -133,14 +140,15 @@ $border_color: #c4c5c9;
   }
 
   .right_side {
+    width: 51.1%;
+    display: flex;
     color: #307bfa;
     font-weight: 500;
-    font-size: clamp(20px, 1.3vw, 25px);
-    width: 51.1%;
+    user-select: none;
     text-align: center;
-    display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: clamp(20px, 1.3vw, 25px);
   }
 
   .divider {
@@ -149,6 +157,7 @@ $border_color: #c4c5c9;
   }
 
   .left_side {
+    flex: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -161,29 +170,35 @@ $border_color: #c4c5c9;
     margin-right: 2vw;
   }
 
+  .request_container {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+  }
+
   .request {
     color: #454647;
     font-weight: 500;
-    font-size: clamp(15px, 1vw, 20px);
+    user-select: none;
     margin-bottom: 8.3vh;
+    font-size: clamp(10px, 1vw, 20px);
   }
 
   .request_data {
+    flex: 1;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    position: fixed;
-    left: 20.1vw;
   }
 
   .request_data_container {
-    width: 5.8vw;
-    text-align: center;
     color: white;
-    border-radius: 5px;
-    display: inline-block;
     padding: 2px 10px;
-    font-size: clamp(10px, 0.8vw, 16px);
-    background-color: #0088e3;
+    text-align: center;
+    border-radius: 5px;
     margin-bottom: 8.1vh;
+    display: inline-block;
+    background-color: #0088e3;
+    font-size: clamp(10px, 0.8vw, 16px);
   }
 }
