--- a/src/app/Pages/Dashboard/Layout/Ticket/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Ticket/styles.module.scss
@@ -146,7 +146,7 @@
       transition: all 0.2s;
 
       &:hover {
-        filter: alpha(0.65);
+        filter: alpha(opacity=0.65);
       }
 
       &:last-child {
