--- a/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
@@ -95,6 +95,11 @@ $header-background-color: #265ecd;
   display: none;
 }
 
+.actions {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .change_button {
   width: 30%;
   opacity: .9;
