--- a/src/app/Pages/Authorization/ConfirmEmail/styles.module.scss
+++ b/src/app/Pages/Authorization/ConfirmEmail/styles.module.scss
@@ -1,5 +1,3 @@
-$text-color: #2d1e1e;
-
 .container {
   height: 100%;
 }
@@ -16,8 +14,8 @@ $text-color: #2d1e1e;
 }
 
 .message {
+  color: #2d1e1e;
   font-weight: bold;
-  color: $text-color;
   margin: 0 0 15px 0;
   font-size: clamp(16px, 2vw, 48px);
 }
