--- a/src/app/Pages/Authorization/SignUp/styles.module.scss
+++ b/src/app/Pages/Authorization/SignUp/styles.module.scss
@@ -1,5 +1,3 @@
-$text-color: #2d1e1e;
-
 .container {
   height: 100%;
 }
@@ -20,6 +18,7 @@ $text-color: #2d1e1e;
   top: 50%;
   width: 38%;
   height: 40%;
+  color: #2d1e1e;
   margin-left: 14%;
   user-select: none;
   text-align: center;
@@ -29,7 +28,6 @@ $text-color: #2d1e1e;
 
 .message1 {
   font-weight: bold;
-  color: $text-color;
   margin: 0 0 15px 0;
   font-size: clamp(16px, 2vw, 48px);
 }
@@ -38,6 +36,5 @@ $text-color: #2d1e1e;
   margin: 0;
   position: fixed;
   text-align: center;
-  color: $text-color;
   font-size: clamp(16px, 1.3vw, 48px);
 }
