--- a/src/app/Pages/Dashboard/Layout/EditTopic/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/EditTopic/styles.module.scss
@@ -23,7 +23,8 @@
     flex-direction: column-reverse;
   }
 
-  .detail_card, .member_card {
+  .detail_card,
+  .member_card {
     margin: 25px 0;
   }
 }
@@ -57,12 +58,12 @@
 }
 
 .middle label {
-  display: block;
   margin: 5px;
-  text-align: right;
+  opacity: 0.8;
+  display: block;
   font-size: 12px;
   color: #707070;
-  opacity: 0.8;
+  text-align: right;
 }
 
 .input {
@@ -75,7 +76,7 @@
   border: none;
   padding: 5px;
   border-radius: 5px;
-  box-shadow: .5px .5px 1px 1px #707070;
+  box-shadow: 0.5px 0.5px 1px 1px #707070;
 }
 
 .below {
@@ -85,26 +86,25 @@
 }
 
 .below label {
-  display: block;
   margin: 5px;
-  text-align: right;
+  opacity: 0.8;
+  display: block;
   font-size: 12px;
   color: #707070;
-  opacity: 0.8;
+  text-align: right;
 }
 
 .below input {
   width: 100%;
   height: 85px;
-  border-radius: 5px;
-  box-shadow: .5px .5px 1px 1px #707070;
   border: none;
-
+  border-radius: 5px;
+  box-shadow: 0.5px 0.5px 1px 1px #707070;
 }
 
 .enter_button {
   width: 40%;
-  opacity: .9;
+  opacity: 0.9;
   height: 32px;
   align-self: center;
   margin-bottom: 15px;
