--- a/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
@@ -11,7 +11,7 @@ $header-background-color: #265ecd;
 }
 
 .header {
-  opacity: .9;
+  opacity: 0.9;
   color: #fff;
   width: 100%;
   height: 61px;
@@ -23,7 +23,7 @@ $header-background-color: #265ecd;
   border-radius: 50px 10px 0 0;
   background-color: $header-background-color;
 
-  img:nth-child(1) {
+  svg:nth-child(1) {
     width: 25px;
     color: #fff;
     height: 24px;
@@ -48,10 +48,10 @@ $header-background-color: #265ecd;
 }
 
 .big {
-  color: #454647;
   direction: rtl;
   line-height: 1;
   font-size: 24px;
+  color: #454647;
   text-align: start;
   font-style: normal;
   font-weight: normal;
@@ -59,7 +59,7 @@ $header-background-color: #265ecd;
 }
 
 .small {
-  opacity: .7;
+  opacity: 0.7;
   direction: rtl;
   color: #454647;
   font-size: 15px;
@@ -85,10 +85,10 @@ $header-background-color: #265ecd;
   transform: translate(-50%, 75%);
 }
 
-.addprofile {
+.add_photo {
+  width: 65px;
+  height: 65px;
   object-fit: none;
-  width: clamp(60px, 7vw, 100px);
-  height: clamp(60px, 7vw, 100px);
 }
 
 .upload_image {
@@ -102,7 +102,7 @@ $header-background-color: #265ecd;
 
 .change_button {
   width: 30%;
-  opacity: .9;
+  opacity: 0.9;
   height: 32px;
   margin-top: 2rem;
   margin-bottom: 3%;
@@ -127,7 +127,7 @@ $header-background-color: #265ecd;
 
 .change input {
   width: 100%;
-  opacity: .7;
+  opacity: 0.7;
   height: 30px;
   border: none;
   padding: 15px;
@@ -138,7 +138,7 @@ $header-background-color: #265ecd;
 
 .record_button {
   width: 30%;
-  opacity: .9;
+  opacity: 0.9;
   height: 32px;
   margin-top: 2rem;
   margin-bottom: 3%;
