--- a/src/app/Pages/Dashboard/styles.module.scss
+++ b/src/app/Pages/Dashboard/styles.module.scss
@@ -22,18 +22,18 @@
   width: calc(100% - clamp(200px, 25%, 462px));
 
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px #212f84;
+    box-shadow: inset 0 0 6px #212f84;
     background-color: #212f84;
   }
 
   &::-webkit-scrollbar {
     width: 6px;
     height: 6px;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
   }
 
   &::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px #212f84;
+    box-shadow: inset 0 0 6px #212f84;
     background-color: #919ff1;
   }
 }
@@ -65,7 +65,8 @@
   color: #ffffff;
 }
 
-.nav li:hover, .exit:hover {
+.nav li:hover,
+.exit:hover {
   background-color: rgba(255, 255, 255, 0.15);
 }
 
@@ -136,7 +137,6 @@
     border: solid 7px rgba(4, 22, 128, 0.88);
   }
 }
-
 
 .exit {
   margin-top: auto;
