--- a/src/app/Pages/Home/Topic/styles.module.scss
+++ b/src/app/Pages/Home/Topic/styles.module.scss
@@ -53,18 +53,18 @@
   width: calc(100% - 5rem);
   height: calc(100% - 2rem);
   justify-content: space-around;
-  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.15),
-  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.15), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .topic:nth-child(2n) > .topic_content {
   background-position: center;
-  background-image: url("../../../../Assets/Images/Files/card_cyan_background.png");
+  background-image: url("../../../Assets/Images/Files/card_cyan_background.png");
 }
 
 .topic:nth-child(2n + 1) > .topic_content {
   background-position: center;
-  background-image: url("../../../../Assets/Images/Files/card_blue_background.png");
+  background-image: url("../../../Assets/Images/Files/card_blue_background.png");
 }
 
 .topic_content > h3 {
@@ -87,8 +87,8 @@
   background-size: cover;
   border-radius: 20px;
   border: solid 1px #707070;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.15),
-  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.15), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .topic_pic img {
