--- a/src/app/Pages/Home/styles.module.scss
+++ b/src/app/Pages/Home/styles.module.scss
@@ -31,7 +31,9 @@ $mobile-header: #1743bf;
   }
 }
 
-.nav_link > a {
+.nav_link > a,
+.nav_link > div {
+  cursor: pointer;
   color: #707070;
   font-size: clamp(15px, 1.1vw, 20px);
 }
@@ -56,6 +58,12 @@ $mobile-header: #1743bf;
   width: 3.6rem;
   height: 3rem;
   margin: 0 0 0 2vw;
+}
+
+svg {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 0 0 3vw;
 }
 
 .nav ul {
@@ -170,19 +178,23 @@ $mobile-header: #1743bf;
   font-size: clamp(30px, 2.4vw, 43px);
 }
 
-.footer_contact p img {
+.footer_contact p img,
+.footer_contact p svg {
   width: 4rem;
   height: 3.3rem;
   margin: 0 0.5rem;
 }
 
 .footer_contact div {
+  display: flex;
   color: #d4d8e3;
+  align-items: center;
   margin: 2rem 12vw 0 0;
   font-size: clamp(13px, 0.8vw, 15px);
 }
 
-.footer_contact div img {
+.footer_contact div img,
+.footer_contact div svg {
   width: 3rem;
   height: 3rem;
   margin: 0 0.5rem;
@@ -214,12 +226,11 @@ $mobile-header: #1743bf;
   margin: 0.5rem 1rem;
 }
 
-.footer_social div img {
+.footer_social div img,
+.footer_social div svg {
   width: 100%;
   height: 100%;
 }
-
-
 
 .mobile_header {
   position: fixed;
@@ -241,7 +252,7 @@ $mobile-header: #1743bf;
     box-shadow: unset;
 
     .mobile_header_activator_top_line {
-      transform: translateY(.35em) rotate(-45deg);
+      transform: translateY(0.35em) rotate(-45deg);
     }
 
     .mobile_header_activator_middle_line {
@@ -249,7 +260,7 @@ $mobile-header: #1743bf;
     }
 
     .mobile_header_activator_bottom_line {
-      transform: translateY(-.35em) rotate(45deg);
+      transform: translateY(-0.35em) rotate(45deg);
     }
 
     .mobile_header_drop_down {
@@ -276,14 +287,16 @@ $mobile-header: #1743bf;
   cursor: pointer;
 }
 
-.mobile_header_activator_top_line, .mobile_header_activator_middle_line, .mobile_header_activator_bottom_line {
+.mobile_header_activator_top_line,
+.mobile_header_activator_middle_line,
+.mobile_header_activator_bottom_line {
   display: block;
   background-color: #ffffff;
   border-radius: 5px;
   width: 1em;
   height: 2px;
   margin: 5px;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .mobile_header_title {
@@ -304,7 +317,7 @@ $mobile-header: #1743bf;
   overflow: hidden;
   box-shadow: 0 1px 1px 0 $mobile-header;
   height: 0;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .mobile_header_drop_down_item {
