--- a/src/app/Pages/Authorization/styles.module.scss
+++ b/src/app/Pages/Authorization/styles.module.scss
@@ -2,7 +2,7 @@
   height: 100%;
   background-size: contain;
   background-repeat: repeat;
-  background-image: url("../../Assets/SVGs/components/seamless_backgroud.svg");
+  background-image: url("../../Assets/SVGs/Files/seamless_backgroud.svg");
 }
 
 .header {
@@ -13,5 +13,5 @@
   background-size: inherit;
   background-repeat: repeat-x;
   background-position-x: center;
-  background-image: url("../../Assets/SVGs/components/wave.svg");
+  background-image: url("../../Assets/SVGs/Files/wave.svg");
 }
