Implement Tickets Page in Dashboard Update Profile Page

--- a/src/app/Pages/Authorization/SignInInput/styles.module.scss
+++ b/src/app/Pages/Authorization/SignInInput/styles.module.scss
@@ -36,6 +36,15 @@ $input_background_color: #fff;
   font-size: clamp(16px, 1vw, 48px);
 }
 
+.switch {
+  margin-top: 15px;
+  color: #5994cf;
+  font-weight: bold;
+  align-self: center;
+  text-decoration: none;
+  font-size: clamp(16px, 1vw, 48px);
+}
+
 .enter_button {
   width: 40%;
   height: 42px;
