Update Main Router Implement AuthorizedRoute Update UserProvider Implement create topic Implement get profile Implement update profile Implement get recomended topics Fix no avatar in create ticker and topic Implement fogot password Implement Dashboard and Home

--- a/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
@@ -115,17 +115,7 @@ $header-background-color: #265ecd;
   margin-left: auto;
 }
 
-.change label {
-  display: block;
-  margin: 5px;
-  text-align: right;
-  line-height: 2;
-  font-size: 15px;
-  color: #454647;
-  font-family: IRANMarker;
-}
-
-.change input {
+.change > input {
   width: 100%;
   opacity: 0.7;
   height: 30px;
@@ -148,4 +138,8 @@ $header-background-color: #265ecd;
 
 .input {
   margin-bottom: 10px;
+}
+
+.input_inner_container {
+  box-shadow: none;
 }
