--- a/src/app/Pages/Dashboard/Layout/CreateTopic/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/CreateTopic/styles.module.scss
@@ -13,7 +13,7 @@ $header-background-color: #265ecd;
 }
 
 .header {
-  opacity: .9;
+  opacity: 0.9;
   color: #fff;
   width: 100%;
   height: 61px;
@@ -42,8 +42,6 @@ $header-background-color: #265ecd;
 }
 
 .picture {
-  object-fit: none;
-  padding-top: 2px;
   border-radius: 50%;
   border: solid 3px #265ecd;
   width: clamp(60px, 7vw, 100px);
@@ -79,7 +77,7 @@ $header-background-color: #265ecd;
   border: none;
   padding: 5px;
   border-radius: 5px;
-  box-shadow: .5px .5px 1px 1px #707070;
+  box-shadow: 0.5px 0.5px 1px 1px #707070;
 }
 
 .below {
@@ -101,14 +99,13 @@ $header-background-color: #265ecd;
   width: 100%;
   height: 85px;
   border-radius: 5px;
-  box-shadow: .5px .5px 1px 1px #707070;
+  box-shadow: 0.5px 0.5px 1px 1px #707070;
   border: none;
-
 }
 
 .enter_button {
   width: 40%;
-  opacity: .9;
+  opacity: 0.9;
   height: 32px;
   align-self: center;
   margin-bottom: 15px;
