Implement Create Topic Implement Edit Topic Implement Create Ticket Implement Profile Implement Identity

--- a/src/app/Pages/CreateTicket/styles.module.scss
+++ b/src/app/Pages/CreateTicket/styles.module.scss
@@ -55,6 +55,11 @@
     flex-direction: column;
     width: clamp(350px, 30%, 566px);
 
+    .loading {
+      top: 50%;
+      position: absolute;
+    }
+
     .avatar {
       margin-top: 3vh;
       border-radius: 50%;
