--- a/src/app/Pages/Dashboard/Layout/EditTopic/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/EditTopic/styles.module.scss
@@ -38,8 +38,6 @@
 }
 
 .picture {
-  object-fit: none;
-  padding-top: 2px;
   border-radius: 50%;
   border: solid 3px #265ecd;
   width: clamp(60px, 10vw, 190px);
@@ -66,7 +64,11 @@
   text-align: right;
 }
 
-.input {
+.description_input {
+  font-size: 18px;
+}
+
+.input_container {
   box-shadow: unset !important;
 }
 
@@ -144,11 +146,11 @@
   }
 
   p {
-    margin: 0;
     color: white;
     font-size: 16px;
     font-weight: 600;
     user-select: none;
+    margin: 2px 0 0 0;
   }
 }
 
