--- a/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Profile/styles.module.scss
@@ -6,17 +6,17 @@ $header-background-color: #265ecd;
   margin: 5% auto 0;
   flex-direction: column;
   border-radius: 50px 10px 0 0;
-  width: clamp(450px, 39vw, 600px);
+  width: clamp(450px, 39.1vw, 750px);
   box-shadow: 1px 2px 2px 1px #7070709c;
 }
 
 .header {
+  width: 100%;
   opacity: 0.9;
   color: #fff;
-  width: 100%;
-  height: 61px;
   display: flex;
   font-size: 16px;
+  min-height: 61px;
   padding-right: 4%;
   align-items: center;
   justify-content: flex-end;
@@ -65,6 +65,7 @@ $header-background-color: #265ecd;
   direction: rtl;
   color: #454647;
   font-size: 15px;
+  user-select: none;
   text-align: start;
   font-style: normal;
   object-fit: contain;
@@ -74,6 +75,7 @@ $header-background-color: #265ecd;
 .profile {
   margin-top: 10%;
   border-radius: 50%;
+  border: solid 3px #265ecd;
   width: clamp(150px, 12vw, 230px);
   height: clamp(150px, 12vw, 230px);
 }
